chore:Added pitest plugin for mutation testing