@@ -47,6 +47,11 @@
 			<artifactId>jackson-databind-nullable</artifactId>
 			<version>0.2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -107,6 +112,37 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.19.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.pitest</groupId>
+						<artifactId>pitest-junit5-plugin</artifactId>
+						<version>1.2.1</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<parseSurefireArgLine>false</parseSurefireArgLine>
+					<targetClasses>
+						<param>com.bookorder.discountcalculator.*</param>
+					</targetClasses>
+					<targetTests>
+						<param>com.bookorder.discountcalculator.*</param>
+					</targetTests>
+					<jvmArgs>
+						<param>-XX:+EnableDynamicAgentLoading</param>
+						<param>-Xmx1024m</param>
+					</jvmArgs>
+					<threads>4</threads>
+					<excludedClasses>
+						<param>com.bookorder.discountcalculator.DiscountCalculatorApplication</param>
+						<param>com.bookorder.discountcalculator.api.*</param>
+						<param>com.bookorder.discountcalculator.model.*</param>
+					</excludedClasses>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
